# BaseCrowProject

./: CMakeLists.txt  CMakeLists_old.txt  README.md
cmake/: FetchCrow.cmake  FetchMustache.cmake
src/: main.cpp  users.db
src/db/: UserRepository.cpp  UserRepository.h
src/interfaces/: IUserRepository.h
src/models/: User.h
src/rest/: ApiRouter.cpp  ApiRouter.h
src/services/: UserService.cpp  UserService.h
src/templates/: index.mustache  new_user_form.mustache  user.mustache  users.mustache
src/ui/: UserForm.h
tests/: CMakeLists.txt  UserServiceTest.cpp
